--- a/frontend.html
+++ b/frontend.html
@@ -411,8 +411,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script>
         // Supabase initialization
-        const supabaseUrl = 'https://your-project-ref.supabase.co';
-        const supabaseKey = 'your-supabase-key';
+        const supabaseUrl = 'https://xjheqmfhqimxhjlrtljk.supabase.co';
+        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhqaGVxbWZocWlteGhqbHJ0bGprIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDgyNDc3ODUsImV4cCI6MjA2MzgyMzc4NX0.3QzMkGfmR6jK6KqnTQ7V1yHhaq6XlY9VcnFbEf4Wxaw';
         const supabase = supabase.createClient(supabaseUrl, supabaseKey);
         
         // DOM elements
